--- a/index.html
+++ b/index.html
@@ -21,12 +21,13 @@
 
     canvas {
       position: absolute;
-      top: 0;
+      top: 10px;
       left: 0;
     }
   </style>
 </head>
 <body>
-  <input type="file" id="imageUpload">
+  <video id="video" width="720" height="560" autoplay muted></video>
+  <!-- <input type="file" id="imageUpload"> -->
 </body>
 </html>
